--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://rendertube.onrender.com
+VITE_API_URL_DEV=http://localhost:5000
+VITE_API_URL_PROD=https://rendertube.onrender.com
